# luatex-experiments

./: .gitignore  build.zig  meson.build
include/: ff-config.h
include/kpathsea/: c-auto.h
include/w2c/: c-auto.h  config.h
src/: cpascal.h  luatex.c  luatex.h  main.zig  meson.build  mvlasak.c  ptexlib.h
src/font/: dofont.c  texfont.c  texfont.h
src/lang/: hyphen.c
src/lib/: meson.build
src/lib/lib/: lib.h  openclose.c
src/lua/: lfontlib.c  liolibext.c  llanglib.c  llualib.c  lstatslib.c  lstrlibext.c  luainit.c  luanode.c  luastuff.c  luatex-api.h  luatoken.c  meson.build
src/luatex/: meson.build
src/luatex/src/: luatex.c  luatex.h  mvlasak.c  ptexlib.h
src/luatex/src/font/: dofont.c  luafont.c  luatexfont.h
src/luatex/src/lang/: hyphen.c
src/luatex/src/lua/: lcallbacklib.c  lfontlib.c  liolibext.c  llualib.c  lnewtokenlib.c  lnodelib.c  loslibext.c  lstatslib.c  lstrlibext.c  ltexiolib.c  ltexlib.c  luainit.c  luastuff.c  luatex-api.h  luatex-core-make.lua  luatex-core.c  luatex-core.lua
src/luatex/src/luafontloader/src/: luafflib.c
src/luatex/src/luapeg/: lpeg.c
src/luatex/src/tex/: commands.c  commands.h  dumpdata.c  equivalents.c  equivalents.h  errors.c  expand.c  extensions.c  extensions.h  inputstack.c  mainbody.c  maincontrol.c  scanning.c  stringpool.c  texfileio.c  texfileio.h  texnodes.c  texnodes.h  textoken.c
src/luatex/src/utils/: utils.c  utils.h
src/tex/: align.c  buildpage.c  commands.c  errors.c  extensions.c  extensions.h  mainbody.c  mainbody.h  printing.c  scanning.c  stringpool.h  texfileio.c  texfileio.h  textoken.c
src/utils/: unistring.c  unistring.h  utils.c  utils.h  web2c_utils.c
subprojects/: lua.wrap
