luatex_src = files(
  'font/dofont.c',
  'font/luafont.c',
  'font/texfont.c',
  'lang/hnjalloc.c',
  'lang/hyphen.c',
  'lang/texlang.c',
  'lua/lcallbacklib.c',
  'lua/lfontlib.c',
  'lua/liolibext.c',
  'lua/llanglib.c',
  'lua/llualib.c',
  'lua/lnewtokenlib.c',
  'lua/lnodelib.c',
  'lua/lstatslib.c',
  'lua/lstrlibext.c',
  'lua/ltexiolib.c',
  'lua/ltexlib.c',
  'lua/luainit.c',
  'lua/luanode.c',
  'lua/luastuff.c',
  'lua/luatoken.c',
  'tex/align.c',
  'tex/arithmetic.c',
  'tex/buildpage.c',
  'tex/commands.c',
  'tex/conditional.c',
  'tex/directions.c',
  'tex/dumpdata.c',
  'tex/equivalents.c',
  'tex/errors.c',
  'tex/expand.c',
  'tex/extensions.c',
  'tex/filename.c',
  'tex/inputstack.c',
  'tex/linebreak.c',
  'tex/mainbody.c',
  'tex/maincontrol.c',
  'tex/mathcodes.c',
  'tex/memoryword.c',
  'tex/mlist.c',
  'tex/nesting.c',
  'tex/packaging.c',
  'tex/postlinebreak.c',
  'tex/primitive.c',
  'tex/printing.c',
  'tex/scanning.c',
  'tex/stringpool.c',
  'tex/texdeffont.c',
  'tex/texfileio.c',
  'tex/texmath.c',
  'tex/texnodes.c',
  'tex/textcodes.c',
  'tex/textoken.c',
  'utils/managed-sa.c',
  'utils/unistring.c',
  'utils/utils.c',
  'utils/web2c_utils.c',
  'luatex.c',
)

lua_c_args = [
  '-DLUA_COMPAT_5_2',
  '-DLUA_USE_POSIX',
  '-DLUA_USE_DLOPEN',
]

cc = meson.get_compiler('c')

luatex_dependencies = [
  cc.find_library('m', required: false),
  cc.find_library('dl', required: false),
  dependency('zlib'),
  dependency('lua5.3'),
]

executable(
  'mmtex',
  sources: luatex_src,
  c_args: [lua_c_args],
  dependencies: luatex_dependencies,
  install: true,
)
