luatex_src = files(
  'src/lua/lstrlibext.c',
  'src/lua/helpers.c',
  'src/lua/texluac.c',
  'src/utils/utils.c',
  'src/lua/luastuff.c',
  'src/lua/luainit.c',
  'src/tex/printing.c',
  'src/font/dofont.c',
  'src/font/luafont.c',
  'src/font/texfont.c',
  'src/lang/hnjalloc.c',
  'src/lang/hyphen.c',
  'src/lang/texlang.c',
  'src/lua/lcallbacklib.c',
  'src/lua/lfontlib.c',
  'src/lua/llanglib.c',
  'src/lua/llualib.c',
  'src/lua/lnodelib.c',
  'src/lua/liolibext.c',
  'src/lua/loslibext.c',
  'src/lua/lstatslib.c',
  'src/lua/ltexiolib.c',
  'src/lua/ltexlib.c',
  'src/lua/lnewtokenlib.c',
  'src/lua/luatex-core.c',
  'src/lua/helpers.c',
  'src/lua/luanode.c',
  'src/lua/luatoken.c',
  'src/lua/mplibstuff.c',
  'src/tex/align.c',
  'src/tex/arithmetic.c',
  'src/tex/buildpage.c',
  'src/tex/commands.c',
  'src/tex/conditional.c',
  'src/tex/directions.c',
  'src/tex/dumpdata.c',
  'src/tex/equivalents.c',
  'src/tex/errors.c',
  'src/tex/expand.c',
  'src/tex/extensions.c',
  'src/tex/filename.c',
  'src/tex/inputstack.c',
  'src/tex/linebreak.c',
  'src/tex/mainbody.c',
  'src/tex/maincontrol.c',
  'src/tex/mathcodes.c',
  'src/tex/memoryword.c',
  'src/tex/mlist.c',
  'src/tex/nesting.c',
  'src/tex/packaging.c',
  'src/tex/postlinebreak.c',
  'src/tex/primitive.c',
  'src/tex/scanning.c',
  'src/tex/stringpool.c',
  'src/tex/texdeffont.c',
  'src/tex/texfileio.c',
  'src/tex/texmath.c',
  'src/tex/texnodes.c',
  'src/tex/textcodes.c',
  'src/tex/textoken.c',
  'src/utils/avl.c',
  'src/utils/avlstuff.c',
  'src/utils/managed-sa.c',
  'src/utils/unistring.c',
  'src/luatex.c',
  '../mplib/src/lmplib.c',
  'src/mvlasak.c'
)

luatex_inc = include_directories(
  'src',
  '..',
)


cc = meson.get_compiler('c')

luatex_dependencies = [
  cc.find_library('m', required: false),
  cc.find_library('dl', required: false),
  dependency('libpng'),
  dependency('zlib'),
  lua_dep,
  mplib_dep,
  pplib_dep,
  w2c_dep,
]

executable(
  'mmtex',
  sources: luatex_src,
  include_directories: [luatex_inc, mmtex_inc],
  dependencies: luatex_dependencies,
  install: true,
)
